--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-API_KEY= "AIzaSyAdmnLoRJI-Bc-uZskirRl2x6BqNrxqIYY"
+API_KEY="AIzaSyAdmnLoRJI-Bc-uZskirRl2x6BqNrxqIYY"
+IG_USERNAME=""
+IG_PASSWORD=""
